--- a/index.html
+++ b/index.html
@@ -3,10 +3,70 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
     <title>Cole Manning</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="css/bootstrap-utilities.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="css/mainStyle.css">
+<!--    &lt;!&ndash; CSS only &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">-->
+<!--    &lt;!&ndash; JavaScript and dependencies &ndash;&gt;-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>-->
+
+    <!--
+    Libraries Used:
+        - Bootstrap
+        - Animate on Scroll (AoS)
+        - Animate.css
+    -->
 </head>
 <body>
+<!--
+Start with a scroll-spy enabled navbar. (https://getbootstrap.com/docs/4.0/components/scrollspy/)
+Use AOS to have divs appear as the user scrolls.
+So it will be a one page, website?
+    Maybe with exception of the projects, which will have a see more section
+-->
 
+
+
+<!--Navigation Bar-->
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" role="navigation">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Small).png" height="30px" alt="head shot"></a>
+        <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Job Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<!--Main Content-->
+<main role="main" class="container-fluid">
+
+</main>
+
+<!--Bootstrap Scripts-->
+<script src="js/bootstrap.bundle.js"></script>
+<script src="js/bootstrap.esm.js"></script>
+<script src="js/bootstrap.js"></script>
+<!--AOS Scripts-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!--Initialize AOS Library-->
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
