--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ So it will be a one page, website?
 
 
 <!--Navigation Bar-->
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark" role="navigation">
+<nav class="navbar navbar-expand-sm" role="navigation">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Small).png" height="30px" alt="head shot"></a>
+        <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Small).png" height="30px" alt="head shot" class="rounded-circle"></a>
         <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
@@ -52,6 +52,57 @@ So it will be a one page, website?
     </div>
 </nav>
 
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--    <div class="container-fluid">-->
+
+<!--            <ul class="navbar-nav">-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" aria-current="page" href="#">Home</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">Features</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">Pricing</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--            <span class="navbar-text">-->
+<!--        Navbar text with an inline element-->
+<!--      </span>-->
+
+<!--    </div>-->
+<!--</nav>-->
+
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<!--    <div class="container-fluid">-->
+<!--        <a class="navbar-brand" href="#">Expand at lg</a>-->
+<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+
+<!--        <div class="collapse navbar-collapse" id="navbarsExample05">-->
+<!--            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">-->
+<!--                <li class="nav-item active">-->
+<!--                    <a class="nav-link" aria-current="page" href="#">Home</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">Link</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item dropdown">-->
+<!--                    <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-expanded="false">Dropdown</a>-->
+<!--                    <ul class="dropdown-menu" aria-labelledby="dropdown05">-->
+<!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
+<!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
+<!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
 
 <!--Main Content-->
 <main role="main" class="container-fluid">
@@ -68,5 +119,6 @@ So it will be a one page, website?
 <script>
     AOS.init();
 </script>
+<link rel="stylesheet" href="css/mainStyle.css">
 </body>
 </html>
