--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ So it will be a one page, website?
 
 
 <!--Navigation Bar-->
-<nav class="navbar navbar-expand-sm" role="navigation">
+<nav class="navbar navbar-expand-sm navbar-dark" role="navigation">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,10 +43,10 @@ So it will be a one page, website?
         <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Small).png" height="30px" alt="head shot" class="rounded-circle"></a>
         <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Job Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Education</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#xp">Job Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#edu">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
             </ul>
         </div>
     </div>
@@ -106,7 +106,99 @@ So it will be a one page, website?
 
 <!--Main Content-->
 <main role="main" class="container-fluid">
+    <div class="container text-center">
+        <h1>Cole Manning</h1>
+        <hr/>
+    </div>
+    <div class="container" id="about-container">
+        <div class="row">
+            <div class="col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg"></div>
+            <div class="col">
+                <h2 id="about">About</h2>
+                <p>I am a rising Sophomore (Class of '23) at Worcester Polytechnic Institute, pursing a degree in Computer Science. Looking to minor in Management Information Systems (MIS)</p>
+            </div>
+        </div>
+        <hr/>
+    </div>
+    <div class="container" id="xp-container">
+        <h2 id="xp">Job Experience</h2>
 
+        <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
+        <h4>Oct 2019 - Present</h4>
+        <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
+
+        <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
+        <h4>Sep 2015 - Aug 2019</h4>
+        <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
+
+        <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
+        <h4>Jun 2017 - Aug 2019</h4>
+        <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
+        <hr/>
+    </div>
+    <div class="container" id="edu-container">
+        <h2 id="edu">Education</h2>
+
+        <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
+        <h4>Class of 2023</h4>
+        <p>Current GPA of X.XX (as of XXX XX). Expecting to Minor in Management Information Systems (MIS)</p>
+
+        <h3>High School Diploma, <span class="secondary">Francis Parker Charter Essential School</span></h3>
+        <h4>Class of 2019</h4>
+        <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, and PHP, making use of the Slim framework and Twig template engine.
+            Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.
+        </p>
+        <hr/>
+    </div>
+    <div class="container" id="projects-container">
+        <h2 id="projects">Projects</h2>
+
+        <h3>Websites</h3>
+
+        <div class="row">
+            <div class="card m-2" style="width: 18rem;">
+                <img src="images/projects/skyborne/Screenshot_2020-08-06%20The%20Skyborne1.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
+                <div class="card-body">
+                    <h5 class="card-title">Skyborne.net</h5>
+                    <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
+                    <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
+                    <a href="#" class="btn btn-primary">Details</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Parkerprojects.info</h5>
+                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                    <a href="#" class="btn btn-primary">Details</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
+                <div class="card-body">
+                    <h5 class="card-title">Parkerprojects.info</h5>
+                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                    <a href="#" class="btn btn-primary">Details</a>
+                </div>
+            </div>
+
+            <div class="card m-2" style="width: 18rem;">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
+                <div class="card-body">
+                    <h5 class="card-title">Parkerprojects.info</h5>
+                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                    <a href="#" class="btn btn-primary">Details</a>
+                </div>
+            </div>
+        </div>
+        <hr/>
+    </div>
+    <h3></h3>
 </main>
 
 <!--Bootstrap Scripts-->
