footer and some styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         - Bootstrap
         - Animate on Scroll (AoS)
         - Animate.css
+        - JQuery
+        - FontAwesome
     -->
 </head>
 <body>
@@ -112,14 +114,14 @@ So it will be a one page, website?
     <span id="about-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
-            <div class="col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-5"></div>
+            <div class="col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about">About</h2>
                 <p>I am a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, click here. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
-                    <a href="https://github.com/RVRX"><i class="fab fa-github mx-3"></i></a>
-                    <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-3"></i></a>
-                    <a href="mailto:cmanning@wpi.edu"><i class="far fa-envelope mx-3"></i></a>
+                    <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
+                    <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
+                    <a href="mailto:cmanning@wpi.edu"><i class="far fa-envelope mx-sm-3"></i></a>
                 </p>
             </div>
         </div>
@@ -129,32 +131,42 @@ So it will be a one page, website?
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="xp-container">
         <h2 id="xp">Job Experience</h2>
 
-        <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
-        <h4>Oct 2019 - Present</h4>
-        <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
-
-        <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
-        <h4>Sep 2015 - Aug 2019</h4>
-        <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
-
-        <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
-        <h4>Jun 2017 - Aug 2019</h4>
-        <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
+        <div class="container item my-5">
+            <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
+            <h4>Oct 2019 - Present</h4>
+            <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
+        </div>
+        <div class="container item my-5">
+            <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
+            <h4>Sep 2015 - Aug 2019</h4>
+            <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
+        </div>
+        <div class="container item my-5">
+            <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
+            <h4>Jun 2017 - Aug 2019</h4>
+            <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
+        </div>
         <hr/>
     </div>
     <span id="edu-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
         <h2 id="edu">Education</h2>
 
-        <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
-        <h4>Class of 2023</h4>
-        <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS)</p>
+        <div class="container item my-lg-5">
+            <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
+            <h4>Class of 2023</h4>
+            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS)</p>
+        </div>
+        <div class="container item my-5">
+            <h3>High School Diploma, <span class="secondary">Francis Parker Charter Essential School</span></h3>
+            <h4>Class of 2019</h4>
+            <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, and PHP, making use of the Slim framework and Twig template engine.
+                Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.
+            </p>
+        </div>
 
-        <h3>High School Diploma, <span class="secondary">Francis Parker Charter Essential School</span></h3>
-        <h4>Class of 2019</h4>
-        <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, and PHP, making use of the Slim framework and Twig template engine.
-            Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.
-        </p>
+
+
         <hr/>
     </div>
     <span id="projects-anchorpoint"></span>
@@ -206,8 +218,38 @@ So it will be a one page, website?
         </div>
         <hr/>
     </div>
-    <h3></h3>
 </main>
+
+<!--Footer-->
+<footer>
+    <div class="container-fluid mb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="footer-header">Contact</p>
+                    <p class="footer-item">
+                        Worcester, MA 01609<br/>
+                        (978)-798-2395<br/>
+                        colemanning@yandex.com
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="footer-header">Explore</p>
+                    <a class="footer-item">Home</a><br/>
+                    <a class="footer-item">About</a><br/>
+                    <a class="footer-item">Education</a><br/>
+                    <a class="footer-item">Projects</a>
+                </div>
+                <div class="col">
+                    <p class="footer-header">Projects</p>
+                    <a class="footer-item">skyborne.net</a><br/>
+                    <a class="footer-item">parkerprojects.info</a><br/>
+                    <a class="footer-item">lugubrious.rip</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <!--Bootstrap Scripts-->
 <script src="js/bootstrap.bundle.js"></script>
