other languages cards

--- a/index.html
+++ b/index.html
@@ -171,48 +171,76 @@ So it will be a one page, website?
     </div>
     <span id="projects-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
-        <h2 id="projects">Projects</h2>
+        <h2 id="projects">Independent Projects</h2>
 
-        <h3>Websites</h3>
+        <div class="container item my-lg-5">
+            <h3>Websites</h3>
+            <div class="row">
+                <div class="card m-2" style="width: 18rem;">
+                    <img src="images/projects/skyborne/Screenshot_2020-08-06%20The%20Skyborne1.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
+                    <div class="card-body">
+                        <h5 class="card-title">Skyborne.net</h5>
+                        <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
+                        <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
+                        <a href="#" class="btn btn-primary">Details</a>
+                    </div>
+                </div>
 
-        <div class="row">
-            <div class="card m-2" style="width: 18rem;">
-                <img src="images/projects/skyborne/Screenshot_2020-08-06%20The%20Skyborne1.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
-                <div class="card-body">
-                    <h5 class="card-title">Skyborne.net</h5>
-                    <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
-                    <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
-                    <a href="#" class="btn btn-primary">Details</a>
+                <div class="card m-2" style="width: 18rem;">
+                    <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Parkerprojects.info</h5>
+                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                        <a href="#" class="btn btn-primary">Details</a>
+                    </div>
+                </div>
+
+                <div class="card m-2" style="width: 18rem;">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
+                    <div class="card-body">
+                        <h5 class="card-title">Parkerprojects.info</h5>
+                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                        <a href="#" class="btn btn-primary">Details</a>
+                    </div>
+                </div>
+
+                <div class="card m-2" style="width: 18rem;">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
+                    <div class="card-body">
+                        <h5 class="card-title">Parkerprojects.info</h5>
+                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                        <a href="#" class="btn btn-primary">Details</a>
+                    </div>
                 </div>
             </div>
-
-            <div class="card m-2" style="width: 18rem;">
-                <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Parkerprojects.info</h5>
-                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
-                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
-                    <a href="#" class="btn btn-primary">Details</a>
+        </div>
+        <div class="container item my-lg-5">
+            <h3>Other Languages</h3>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card m-2" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Mumble Image Resizer</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
+                            <p class="card-text">Resizes images to a certain length in Base64, and copies Mumble readable code to clipboard so that they can be sent over Mumble servers with small filesize limits.</p>
+                            <a href="#" class="card-link">source</a>
+                            <a href="#" class="card-link">download</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="card m-2" style="width: 18rem;">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
-                <div class="card-body">
-                    <h5 class="card-title">Parkerprojects.info</h5>
-                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
-                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
-                    <a href="#" class="btn btn-primary">Details</a>
-                </div>
-            </div>
-
-            <div class="card m-2" style="width: 18rem;">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
-                <div class="card-body">
-                    <h5 class="card-title">Parkerprojects.info</h5>
-                    <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
-                    <p class="card-text">A web app to display my peer's Senior Projects.</p>
-                    <a href="#" class="btn btn-primary">Details</a>
+                <div class="col-sm-6">
+                    <div class="card m-2" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Computronics tape-util</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
+                            <p class="card-text">A group of Utilities for tapes in the Minecraft mod, Computronics.</p>
+                            <a href="#" class="card-link">source</a>
+                            <a href="#" class="card-link">download</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
