--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ So it will be a one page, website?
 
 <!--Footer-->
 <footer>
-    <div class="container-fluid mb-4">
+    <div class="container-fluid pb-4 pt-3">
         <div class="container">
             <div class="row">
                 <div class="col">
